<resources>
    <string name="app_name">PropertyMobile</string>
    <string name="transactions">See past transactions</string>
    <string name="no_floor_range">This property doesn\'t have multiple floors.</string>
    <string name="search_hint">Type your property search here</string>
    <string name="search_button">Search</string>
    <string name="to_calculator_button">Calculate your home loan</string>
    <string name="calculate_button">Calculate</string>
    <string name="price_estimator_button">Estimate future prices</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="new_here">New around here? Sign up</string>
    <string name="login_success">Login is successful!</string>
    <string name="register_success">Registration is successful!</string>
    <string name="gps_unavailable">GPS Coordinates Unavailable</string>
    <string name="district_with_space">"District "</string>
    <string name="no_flask_connect">Unable to connect to the Prediction server. Price prediction functions will be unavailable</string>
    <string name="estimated_price">"Estimated price: "</string>
    <string name="please_add_2_projects_to_be_compared">Please add 2 projects to be compared</string>
    <string name="property_name">Property Name:</string>
    <string name="map_of_property1">Map of Property1</string>
    <string name="name">name</string>
    <string name="district">District:</string>
    <string name="districttext">district</string>
    <string name="roadlabel">Road:</string>
    <string name="road">road</string>
    <string name="nearest_mrtlabel">Nearest MRT:</string>
    <string name="mrt">mrt</string>
    <string name="walking_time_to_mrtlabel">Walking Time to MRT:</string>
    <string name="time">time</string>
    <string name="average_price_label">Average Price:</string>
    <string name="price">$price</string>
    <string name="floor_range_label">Floor Range:</string>
    <string name="floors">floors</string>
    <string name="tenure_years_label">Tenure(years):</string>
    <string name="tenure">tenure</string>
    <string name="top_label">TOP:</string>
    <string name="topyears">topyears</string>
    <string name="please_add_another_project_to_be_compared">Please add another project to be compared</string>
    <string name="map_of_property2">Map of Property2</string>
    <string name="clear_selected">Clear selected</string>
    <string name="search">Search</string>
    <string name="search_properties_to_compare">Search properties to compare</string>
    <string name="no_favourites_found_nplease_add_some">No favourites found. \nPlease add some.</string>
    <string name="insert_price">Insert Price</string>
    <string name="input_downpayment">Input Downpayment</string>
    <string name="length_of_loan_in_years">Length of Loan in Years</string>
    <string name="interest_rate">Interest Rate</string>
    <string name="_0_per_month_placeholder">$0 per month</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="register">Register</string>
    <string name="property_market_indicator">Property Market Indicator</string>
    <string name="by_team_7">by Team 7</string>
    <string name="unable_to_connect_to_the_server_please_try_again_later">Unable to connect to the server. Please try again later.</string>
    <string name="an_image_of_a_house">An image of a house</string>
    <string name="project_label">project_label</string>
    <string name="district2">District</string>
    <string name="year">Year</string>
    <string name="tenure1">Tenure</string>
    <string name="predict">Predict</string>
    <string name="floor_area">Floor Area:</string>
    <string name="top_year">TOP Year:</string>
    <string name="tenure2">Tenure:</string>
    <string name="no_result_found_nplease_try_again">No result found. \nPlease try again.</string>
    <string name="compare">+ compare</string>
    <string name="clear_amp_compare"><![CDATA[Clear & + Compare]]></string>
    <string name="region_amp_district"><![CDATA[Region & District]]></string>
    <string name="region_input">region input</string>
    <string name="district_example">District example</string>
    <string name="nearest_train_station">Nearest Train Station</string>
    <string name="distance_text">distance text</string>
    <string name="properties_you_may_like">Properties you may like...</string>
    <string name="placeholder">placeholder</string>
    <string name="map_of_property">map of property</string>
    <string name="predict_newly_launched_properties">Predict Newly Launched Properties</string>
    <string name="my_list">My List</string>
    <string name="compare_properties">Compare Properties</string>
</resources>