<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ComparisonActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/compare_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat"
            app:title="Compare Properties" />

        <TextView
            android:id="@+id/errorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:text="@string/please_add_2_projects_to_be_compared"
            android:textSize="15sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/compare_toolbar" />

        <ProgressBar
            android:id="@+id/loadProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/compare_toolbar" />

        <LinearLayout
            android:id="@+id/compareLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/compare_toolbar">

            <LinearLayout
                android:id="@+id/leftCompareLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/leftStaticMapImageView"
                    android:layout_width="450px"
                    android:layout_height="450px"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/leftTOPTextView"
                    tools:srcCompat="@tools:sample/avatars"
                    android:contentDescription="@string/map_of_property1" />

                <TextView
                    android:id="@+id/leftNameLabelView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/property_name" />

                <TextView
                    android:id="@+id/leftNameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/leftDistrictLabelView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/district" />

                <TextView
                    android:id="@+id/leftDistrictTextView"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/districttext" />

                <TextView
                    android:id="@+id/leftRoadLabelView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/roadlabel" />

                <TextView
                    android:id="@+id/leftRoadTextView"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/road" />

                <TextView
                    android:id="@+id/leftMRTLabelView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/nearest_mrtlabel" />

                <TextView
                    android:id="@+id/leftMRTTextView"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/mrt" />

                <TextView
                    android:id="@+id/leftTimeLabelView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/walking_time_to_mrtlabel" />

                <TextView
                    android:id="@+id/leftTimeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/time" />

                <TextView
                    android:id="@+id/leftPriceLabelView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/average_price_label" />

                <TextView
                    android:id="@+id/leftPriceTextView"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/price" />

                <TextView
                    android:id="@+id/leftRangeLabelView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/floor_range_label" />

                <TextView
                    android:id="@+id/leftRangeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/floors" />

                <TextView
                    android:id="@+id/leftTenureLabelView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/tenure_years_label" />

                <TextView
                    android:id="@+id/leftTenureTextView"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/tenure" />

                <TextView
                    android:id="@+id/leftTOPLabelView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/top_label" />

                <TextView
                    android:id="@+id/leftTOPTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/topyears" />

            </LinearLayout>

            <View
                android:id="@+id/divider2"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:id="@+id/blankCompareLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/addProjectTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="260dp"
                    android:padding="6dp"
                    android:text="@string/please_add_another_project_to_be_compared"
                    android:textSize="15sp"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/rightCompareLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:visibility="visible">


                <ImageView
                    android:id="@+id/rightStaticMapImageView"
                    android:layout_width="450px"
                    android:layout_height="450px"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rightTOPTextView"
                    tools:srcCompat="@tools:sample/avatars"
                    android:contentDescription="@string/map_of_property2" />

                <TextView
                    android:id="@+id/rightNameLabelView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="end"
                    android:text="@string/property_name" />

                <TextView
                    android:id="@+id/rightNameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="end"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/rightDistrictLabelView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="end"
                    android:text="@string/district" />

                <TextView
                    android:id="@+id/rightDistrictTextView"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="end"
                    android:text="@string/districttext" />

                <TextView
                    android:id="@+id/rightRoadLabelView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="end"
                    android:text="@string/roadlabel" />

                <TextView
                    android:id="@+id/rightRoadTextView"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="end"
                    android:text="@string/road" />

                <TextView
                    android:id="@+id/rightMRTLabelView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="end"
                    android:text="@string/nearest_mrtlabel" />

                <TextView
                    android:id="@+id/rightMRTTextView"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:gravity="end"
                    android:text="@string/mrt" />

                <TextView
                    android:id="@+id/rightTimeLabelView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="end"
                    android:text="@string/walking_time_to_mrtlabel" />

                <TextView
                    android:id="@+id/rightTimeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="end"
                    android:text="@string/time" />

                <TextView
                    android:id="@+id/rightPriceLabelView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="end"
                    android:text="@string/average_price_label" />

                <TextView
                    android:id="@+id/rightPriceTextView"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="end"
                    android:text="@string/price" />

                <TextView
                    android:id="@+id/rightRangeLabelView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="end"
                    android:text="@string/floor_range_label" />

                <TextView
                    android:id="@+id/rightRangeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="end"
                    android:text="@string/floors" />

                <TextView
                    android:id="@+id/rightTenureLabelView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="end"
                    android:text="@string/tenure_years_label" />

                <TextView
                    android:id="@+id/rightTenureTextView"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="end"
                    android:text="@string/tenure" />

                <TextView
                    android:id="@+id/rightTOPLabelView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="end"
                    android:text="@string/top_label" />

                <TextView
                    android:id="@+id/rightTOPTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/topyears" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_properties_to_compare"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/errorTextView" />

        <Button
            android:id="@+id/smallSearchButton"
            android:layout_width="192dp"
            android:layout_height="52dp"
            android:layout_marginTop="400dp"
            android:layout_marginEnd="5dp"
            android:text="@string/search"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/clearButton"
            android:layout_width="165dp"
            android:layout_height="57dp"
            android:text="@string/clear_selected"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/compareLayout" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>